--- a/frontend/src/app/exchangerate/exchangerate.component.html
+++ b/frontend/src/app/exchangerate/exchangerate.component.html
@@ -14,6 +14,8 @@
       <option *ngFor="let currency of currencies; " value={{currency.id}} >{{currency.symbol}} - {{currency.name}}</option>
     </select>
   </div>
+
+  <button (click)="test()">test</button>
 </div>
 
 
