--- a/frontend/src/app/exchangerate/exchangerate.component.html
+++ b/frontend/src/app/exchangerate/exchangerate.component.html
@@ -1,42 +1,46 @@
 <div class="container">
   <div class="row">
-
     <div class="col-md-4 col-sm-12">
-
-      <label for="currency">Waluta 1 :</label>
+      <label for="currency">Waluta podstawowa:</label>
       <select class="form-control " id="currency" (change)="chooseCurrency($event)">
         <option *ngFor="let currency of currencies; " value={{currency.symbol}} >{{currency.symbol}} - {{currency.name}}</option>
       </select>
     </div>
     <div class="col-md-4 col-sm-12">
-
-
       <label for="currency2">Waluta 2 :</label>
-      <select class="form-control" id="currency2" (change)="chooseCurrency($event)">
-        <option *ngFor="let currency of currencies; " value={{currency.id}} >{{currency.symbol}} - {{currency.name}}</option>
+      <select class="form-control" id="currency2" (change)="chooseCurrency2($event)">
+        <option *ngFor="let currency of currencies; " value={{currency.symbol}} >{{currency.symbol}} - {{currency.name}}</option>
+      </select>
+    </div>
+    <div class="col-md-4 col-sm-12">
+      <label for="currency3">Waluta 3 :</label>
+      <select class="form-control" id="currency3" (change)="chooseCurrency3($event)">
+        <option *ngFor="let currency of currencies; " value={{currency.symbol}} >{{currency.symbol}} - {{currency.name}}</option>
       </select>
     </div>
   </div>
   <br>
+  <div class="row break col-md-12">aktualna stawka: {{rateValue}}</div>
+
   <div class="row">
-    <div class="col-md-4">
-      <label for="date1" > Date 1:</label>
-      <input id="date1" type="text" value={{startDate}} placeholder="2018-01-30">
+    <div class="col-md-12">
+      <label for="date1" class="col-md-2"> Data początkowa:</label>
+      <input id="date1" class="col-md-2" type="text" value={{startDate}} placeholder="2018-01-30">
     </div>
-    <div class="col-md-4">
-      <label for="date2" > Date 2:</label>
-      <input id="date2" type="text" value={{endDate}} placeholder="2018-01-30">
+    <div class="col-md-12">
+      <label for="date2" class="col-md-2"> Data końcowa:</label>
+      <input id="date2" class="col-md-2" type="text" value={{endDate}} placeholder="2018-01-30">
     </div>
 
 
   </div>
   <div class="row radio">
-    <button class=" btn-block" (click)="test()">Calculate difference</button>
+    <button class=" btn-block" (click)="getDifferenceForChosenPeriodOfTime()">Wyświetl różnice kupna</button>
   </div>
 
   <div *ngFor="let elem of result">
   <div class="row"> {{elem.time}}: {{elem.rate}}</div>
   </div>
 
-  <div>{{rateValue}}</div>
+
 </div>
