--- a/frontend/src/app/exchangerate/exchangerate.component.css
+++ b/frontend/src/app/exchangerate/exchangerate.component.css
@@ -3,3 +3,21 @@
   margin-right: 10%;
   width: 80%;
 }
+
+.custom-input {
+  width: 50px;
+}
+
+.button-position {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.button-position-outerDiv {
+  position: relative;
+}
+
+.display-block {
+  display: block;
+}
