--- a/frontend/src/app/exchangerate/exchangerate.component.html
+++ b/frontend/src/app/exchangerate/exchangerate.component.html
@@ -1,7 +1,30 @@
 <div class="container">
   <label for="currency">Waluta:</label>
-  <select class="form-control" id="currency" (change)="chooseCurrency($event)">
+  <select class="form-control" id="currency" (change)="chooseCurrency($event)" [(ngModel)]="currency">
     <option *ngFor="let currency of currencies; " value={{currency.symbol}} >{{currency.symbol}} - {{currency.name}}</option>
   </select>
 <div>{{rateValue}}</div>
+</div>
+
+
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-body button-position-outerDiv">
+      <div><b>Waluty in:</b></div>
+      <label *ngFor="let currency of currencies">
+        <input class="custom-input" (change)="setArrayWithCheckboxValues($event, currency)" type="checkbox">
+        <span>{{currency.symbol}}</span>
+      </label>
+      <div *ngIf="selectedCurrencies">
+        <div *ngFor="let currency of selectedCurrencies;let i = index">
+          <div>
+            <div class="col-sm-1">{{currency}}</div>
+            <div class="col-sm-7"><input [(ngModel)]="currenciesAmount[i]" class="form-control" placeholder="ilość"/></div>
+          </div>
+        </div>
+      </div>
+      <div><button type="submit" class="button-position btn btn-primary" (click)="calculateCurrenciesRate()">Oblicz</button></div>
+      <div>{{rateValueForSelectedCurrencies}}</div>
+    </div>
+  </div>
 </div>
